--- a/EditoresDeTexto/src/index.html
+++ b/EditoresDeTexto/src/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>{{ title }}</title>
   <base href="/">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="../src/favicon.ico">
+
+  <script src="https://cdn.ckeditor.com/4.10.1/full/ckeditor.js"></script>
+
 </head>
 <body style="background-color: #ecf0f5;">
   <img src="assets/background/pattern.png"  style="position: absolute; background-color: #ecf0f5;  right: 100;  z-index: -100;">
