--- a/EditoresDeTexto/src/index.html
+++ b/EditoresDeTexto/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="../src/favicon.ico">
 
-  <script src="https://cdn.ckeditor.com/4.10.1/full/ckeditor.js"></script>
+  <!-- <script src="https://cdn.ckeditor.com/4.10.1/full/ckeditor.js"></script> -->
 
 </head>
 <body style="background-color: #ecf0f5;">
