--- a/EditoresDeTexto/documentation/miscellaneous/variables.html
+++ b/EditoresDeTexto/documentation/miscellaneous/variables.html
@@ -149,8 +149,8 @@
                         <td class="col-md-4">
                             <i>Default value : </i><code>{
   production: true,
-  BASE_URL : &#x27;http://appsdev.fepba.gov.ar/&#x27;,
-  API_URL: &#x27;http://appsdev.fepba.gov.ar/api/&#x27;
+  BASE_URL : &#x27;http://appsdev.fepba.gov.ar&#x27;,
+  API_URL: &#x27;http://appsdev.fepba.gov.ar/api&#x27;
 }</code>
                         </td>
                     </tr>
@@ -183,8 +183,8 @@
                         <td class="col-md-4">
                             <i>Default value : </i><code>{
   production: false,
-  BASE_URL: &#x27;https://localhost:4200/&#x27;,
-  API_URL: &#x27;https://localhost:44365/api/&#x27;
+  BASE_URL: &#x27;https://localhost:4200&#x27;,
+  API_URL: &#x27;http://localhost:49266/api&#x27;
 }</code>
                         </td>
                     </tr>
@@ -217,8 +217,8 @@
                         <td class="col-md-4">
                             <i>Default value : </i><code>{
   production: false,
-  BASE_URL: &#x27;https://localhost:4200/&#x27;,
-  API_URL: &#x27;https://localhost:44365/api/&#x27;
+  BASE_URL: &#x27;https://localhost:4200&#x27;,
+  API_URL: &#x27;http://localhost:49266/api&#x27;
 }</code>
                         </td>
                     </tr>
